--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,17 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-
-            android:name=".MainActivity2"
-            android:label="Airline Dalats"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:name=".RegisterActivity"
             android:exported="false" />
+        <activity
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false"
+            android:label="Airline Dalats" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
